fix letter spacing in non h1 headers

--- a/src/components/Heading/Heading.scss
+++ b/src/components/Heading/Heading.scss
@@ -44,7 +44,6 @@
 }
 
 .element-type-h2 {
-  letter-spacing: -1px;
   @include font-title();
   &.size-small,
   &.size-medium {
@@ -52,7 +51,6 @@
   }
 }
 .element-type-h3 {
-  letter-spacing: -1px;
   @include font-title-secondary();
   &.size-small,
   &.size-medium {
@@ -61,7 +59,6 @@
 }
 
 .element-type-h4 {
-  letter-spacing: -1px;
   @include font-subtitle();
 }
 
